# quintessence_analysis

./: .gitignore  README.md  align.py  alignment_to_mongo.R  alignment_to_sql.R  config.json  corpus_to_mongo.R  create_dtm_lemma.R  dt_to_mongo.R  embed.py  embed_groupby.py  embed_to_sql.R  firstpos_to_mongo.R  firstpos_to_sql.R  freq.py  freq_to_mongo.R  getnn.py  lda_tuning.R  ldatuning_test.R  main.py  mallet_tm_to_sql.R  meta_to_mongo.R  meta_to_sql.R  mongo_credentials.json  nn_to_mongo.R  pyproject.toml  requirements.txt  sparsity.R  test_credentials.json  tm_to_sql.R  topic_model.R  topics_to_mongo.R  toptfidf_to_sql.R  tt_to_mongo.R
R/: lda_tuning.R
python/: embeddings.py  main.py  meta-testing.py  topicmodel.py
python/models/: embeddings.py  topicmodel.py
python/utils/: mongo.py  nlp.py
quintessence/: alignment.py  corpus.py  embeddings.py  mongo.py  nlp.py  parse_embed.py  parse_lda.py  parse_topicmodel.py  pipeline.py  topicmodel.py  wordcounts.py
quintessence/models/: embeddings.py
tests/: test_mongo.py
