[tool.poetry]
name = "quintessence"
version = "0.1.0"
description = ""
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^3.11"
pandas = "^1.1"
numpy = "^1.19"
gensim = "^3.8"
joblib = "^0.17.0"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
ipython = "^7.19"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
